// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`QueryParametersDialog handles ARRAY type parameters correctly 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-1"
        aria-modal="true"
        class="bp6-dialog query-parameters-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-1"
          >
            Dynamic query parameters
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        >
          <p>
            Druid SQL supports dynamic parameters using question mark 
            <code
              class="bp6-code"
            >
              ?
            </code>
             syntax, where parameters are bound positionally to ? placeholders at execution time.
          </p>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 1
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      ARRAY
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    class="bp6-input"
                    placeholder="[-25.7, null, 36.85]"
                    type="text"
                    value="[1,2,3]"
                  />
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 2
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      ARRAY
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    class="bp6-input"
                    placeholder="[-25.7, null, 36.85]"
                    type="text"
                    value="["a","b",null]"
                  />
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 3
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      ARRAY
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    class="bp6-input"
                    placeholder="[-25.7, null, 36.85]"
                    type="text"
                    value="[]"
                  />
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <button
            class="bp6-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-plus"
            >
              <svg
                data-icon="plus"
              />
            </span>
            <span
              class="bp6-button-text"
            >
              Add parameter
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp6-button bp6-intent-primary"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`QueryParametersDialog matches snapshot 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-0"
        aria-modal="true"
        class="bp6-dialog query-parameters-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-0"
          >
            Dynamic query parameters
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        >
          <p>
            Druid SQL supports dynamic parameters using question mark 
            <code
              class="bp6-code"
            >
              ?
            </code>
             syntax, where parameters are bound positionally to ? placeholders at execution time.
          </p>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 1
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      VARCHAR
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    class="bp6-input"
                    placeholder="Parameter value"
                    type="text"
                    value="Hello world"
                  />
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 2
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      TIMESTAMP
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    class="bp6-input"
                    placeholder="2022-01-01 00:00:00"
                    type="text"
                    value="2022-02-02 01:02:03"
                  />
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 3
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      BIGINT
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-control-group bp6-fill fancy-numeric-input bp6-numeric-input"
                  role="group"
                >
                  <div
                    class="bp6-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp6-input"
                      type="text"
                      value="42"
                    />
                  </div>
                  <div
                    class="bp6-button-group bp6-vertical bp6-fixed"
                  >
                    <button
                      aria-label="increment"
                      class="bp6-button"
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="bp6-icon bp6-icon-chevron-up"
                      >
                        <svg
                          data-icon="chevron-up"
                        />
                      </span>
                    </button>
                    <button
                      aria-label="decrement"
                      class="bp6-button"
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="bp6-icon bp6-icon-chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 4
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      DOUBLE
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-control-group bp6-fill fancy-numeric-input bp6-numeric-input"
                  role="group"
                >
                  <div
                    class="bp6-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp6-input"
                      type="text"
                      value="1.618"
                    />
                  </div>
                  <div
                    class="bp6-button-group bp6-vertical bp6-fixed"
                  >
                    <button
                      aria-label="increment"
                      class="bp6-button"
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="bp6-icon bp6-icon-chevron-up"
                      >
                        <svg
                          data-icon="chevron-up"
                        />
                      </span>
                    </button>
                    <button
                      aria-label="decrement"
                      class="bp6-button"
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="bp6-icon bp6-icon-chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="bp6-form-group"
          >
            <label
              class="bp6-label"
            >
              Parameter in position 5
               
              <span
                class="bp6-text-muted"
              />
            </label>
            <div
              class="bp6-form-content"
            >
              <div
                class="bp6-control-group bp6-fill"
                role="group"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      class="bp6-button-text"
                    >
                      ARRAY
                    </span>
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                      />
                    </span>
                  </button>
                </span>
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    class="bp6-input"
                    placeholder="[-25.7, null, 36.85]"
                    type="text"
                    value="[-25.7,null,36.85]"
                  />
                </div>
                <button
                  class="bp6-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-trash"
                  >
                    <svg
                      data-icon="trash"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
          <button
            class="bp6-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-plus"
            >
              <svg
                data-icon="plus"
              />
            </span>
            <span
              class="bp6-button-text"
            >
              Add parameter
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp6-button bp6-intent-primary"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;
